# RubiksCubeSolver

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE.md  README.MD
src/: #defs.rs#  .#defs.rs  main.rs  notation.rs
src/__assets/: prunning_values
src/console/: mod.rs
src/cubes/: .#coord_cube.rs  coord_cube.rs  cubie_cube.rs  face_cube.rs  mod.rs
src/defs/: corner_cubies.rs  edge_cubies.rs  facelets.rs  mod.rs
src/facelets/: mod.rs  mod.rs~
src/gui/: mod.rs
src/physical/: #corner_cubies.rs#  .#mod.rs  corner_cubies.rs  edge.rs  edge_cubies.rs  mod.rs
src/prunning/: mod.rs
src/solver/: mod.rs  phase_one.old.rs  phase_one.rs  phase_two.rs
src/ui/console/: mod.rs
src/ui/gui/: mod.rs
src/ui_support/: mod.rs
src/utility/: mod.rs
