[package]
name = "rubiks"
version = "0.4.1"
authors = ["Malik Kissarli <kissarlim@gmail.com>"]

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]

[dependencies]
glium = "0.28"
imgui = "0.6.0"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
clipboard = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

